# immich-geodata-zh-tw

./: .gitignore  CHANGELOG.conventional.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE.md  README.en.md  README.md  WIKIDATA_TRANSLATOR_BRANCH_NOTES.md  WIKIDATA_TRANSLATOR_IMPLEMENTATION_PLAN.md  WIKIDATA_TRANSLATOR_PRP.md  WIKIDATA_TRANSLATOR_TODO.md  auto_update.sh  japan-admin-guidelines.md  main.py  prepare_geoname_data.sh  pyproject.toml  release.sh  requirements.txt  update_data.sh
.github/workflows/: auto-update.yaml  release.yaml  sync-nightly.yaml
core/: constants.py  define.py  enhance_data.py  generate_geodata_locationiq.py  generate_release.py  japan_geodata.py  modify_admin1.py  pack_release.py  prepare_geoname.py  schemas.py  taiwan_geodata.py  translate.py  utils.py
core/geodata/: __init__.py  base.py  japan.py  south_korea.py  taiwan.py
core/processors/: __init__.py  base.py  taiwan.py
core/utils/: __init__.py  alternate_names.py  dataframe.py  filesystem.py  geoname_ids.py  google_geocoding.py  logging.py  wikidata_translator.py
docs/en/: japan-admin-processing.md  south-korea-admin-processing.md  taiwan-admin-processing.md  wikidata-translator.md
docs/pr/: chore-nlsc-update-1140825.md
docs/zh-tw/: japan-admin-processing.md  south-korea-admin-processing.md  wikidata-translator.md  (+1 more)
geodata/: enhance_data.py  generate_geodata_locationiq.py  modify_admin1.py  prepare_geoname_data.sh  release.sh  translate.py  utils.py
meta_data/: JP.csv  KR.csv  TH.csv  TW.csv  kr_geodata.csv  taiwan_geodata.csv  tw_geodata.csv
tests/: test_geodata_base.py
(+4 files in other folders)
