[project]
name = "immich-geodata-zh-tw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru==0.7.3",
    "opencc==1.1.9",
    "polars==1.32.2",
    "regex==2025.7.34",
    "requests==2.32.4",
    "tqdm==4.67.1",
]

[dependency-groups]
dev = [
    "geopandas>=1.1.1",
    "ruff>=0.12.8",
    "scipy>=1.16.1",
]
