[project]
name = "immich-geodata-zh-tw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru==0.7.3",
    "opencc==1.1.9",
    "polars==1.33.0",
    "regex==2025.9.1",
    "requests==2.32.5",
    "tqdm==4.67.1",
    "geopandas>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.3.4",
    "ruff>=0.12.11",
]
